# Distributed-Task-Processing-Platform

./: 1_changes_final.patch  1_changes_final_2.patch.txt  2_changes_noCancelRequest_2.patch  CMakeLists.txt  README.md
src/: main.cpp  utils.cpp  utils.h
src/common/: task.cpp  task.h  thread_safe_queue.cpp  thread_safe_queue.h  thread_safe_queue_impl.h
src/scheduler/: scheduler.cpp  scheduler.h  scheduler_impl.h
src/worker/: worker.cpp  worker.h  worker_impl.h  worker_pool.cpp  worker_pool.h  worker_pool_impl.h
tests/: task_test.h  task_test.h.rej  test_utils.cpp  test_utils.h
tests/common/: task_test.cpp  thread_safe_queue_test.cpp
tests/fakes/: fake_queue.h  fake_task.h
tests/scheduler/: scheduler_test.cpp
tests/worker/: worker_pool_test.cpp  worker_test.cpp
